--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vmserv",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -12,6 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0"
+    "@mendable/firecrawl-js": "^1.29.3",
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
+    "node-fetch": "^3.3.2",
+    "openai": "^5.11.0"
   }
 }
